fix text wrapping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,10 @@ a {
   border: 3px dashed #58f;
 }
 
+.textWrap {
+  white-space: pre-wrap;
+}
+
 .unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -36,7 +40,6 @@ a {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  white-space: pre-wrap;
 }
 
 svg * { pointer-events: all;}
